# nmnh_ms_tools

./: .coveragerc  .gitignore  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  index.rst
examples/georeferencer/: georeferencer.ipynb
nmnh_ms_tools/: __init__.py
nmnh_ms_tools/bots/: __init__.py  adamancer.py  core.py  elsevier.py  geodeepdive.py  geogallery.py  geonames.py  gnrd.py  itis.py  macrostrat.py  metbull.py  metbullbot.py  plss.py  xdd.py  xddbot.py
nmnh_ms_tools/config/: __init__.py  config.py  downloader.py
nmnh_ms_tools/databases/: __init__.py  helpers.py
nmnh_ms_tools/processes/: __init__.py
nmnh_ms_tools/records/: __init__.py  catnums.py  catnums2.py  catnums_old.py  core.py  people.py  sites.py  specimens.py  template.py
nmnh_ms_tools/routines/: __init__.py
nmnh_ms_tools/utils/: __init__.py  cache.py  classes.py  clock.py  coords.py  dates.py  emu.py  files.py  geo.py  gliner.py  lists.py  measurements.py  misc.py  numeric.py  prefixed_num.py  preps.py  regex.py  strings.py
tests/: __init__.py
tests/deprecated_tests/: test_tools_specimen_numbers_old.py
tests/integration_tests/: __init__.py  conftest.py  test_bots.py  test_caches.py  test_databases_features.py  test_evaluator.py  test_processes_georeferencer.py  test_records_strat.py  test_routines_georeferencer.py  test_sites.py
tests/unit_tests/: test_config.py  test_databases_gvp.py  test_geo_geometry.py  test_geo_parsers.py  test_geo_parsers_helpers.py  test_records_catnum.py  test_records_catnums.py  test_records_people.py  (+22 more)
(+191 files in other folders)
